[package]
name = "ps_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "http2", "headers"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = { version = "1" }
semver = { version = "1", features = ["serde"] }
config = { version = "0.13", features = ["json5"] }
json5 = "0.4"
log = "0.4.18"
env_logger = "0.10.0"
http = "0.2.9"
ws_common = { path = "../ws_common" }
once_cell = "1.18.0"
tower-http = { version = "0.4.3", features = ["normalize-path"] }
tower = "0.4.13"
